--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,204 +1,190 @@
-/**
- * Reset some basic elements
- */
-body, h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
-    margin: 0;
-    padding: 0;
+/* 
+Base 
+*/
+* + *{
+	margin-top: $spacing-unit;
 }
 
-
-
-/**
- * Basic styling
- */
-body {
-    font-family: $base-font-family;
-    font-size: $base-font-size;
-    line-height: $base-line-height;
-    font-weight: 300;
-    color: $text-color;
-    background-color: $background-color;
-    -webkit-text-size-adjust: 100%;
+html{
+	font-family: $font-default;
 }
 
-
-
-/**
- * Set `margin-bottom` to maintain vertical rhythm
- */
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure,
-%vertical-rhythm {
-    margin-bottom: $spacing-unit / 2;
+body{
+	background: $bg-color;
+	color: $text-color;
 }
 
-
-
-/**
- * Images
- */
-img {
-    max-width: 100%;
-    vertical-align: middle;
+h1{
+	font-size: 1.75em;
 }
 
-
-
-/**
- * Figures
- */
-figure > img {
-    display: block;
+h2{
+	font-size: 1.5em;
 }
 
-figcaption {
-    font-size: $small-font-size;
+h3{
+	font-size: 1em;
 }
 
-
-
-/**
- * Lists
- */
-ul, ol {
-    margin-left: $spacing-unit;
+h4{
+	font-size: .75em;
 }
 
-li {
-    > ul,
-    > ol {
-         margin-bottom: 0;
-    }
+ul{
+	list-style-type: none;
 }
 
+a{
+	text-decoration: none;
+	color: inherit;
+	transition: all .3s ease;
+	display: inline-block;
 
-
-/**
- * Headings
- */
-h1, h2, h3, h4, h5, h6 {
-    font-weight: 300;
+	&:hover,
+	&:focus{
+		color: darken($text-color, 15%);
+	}
 }
 
-
-
-/**
- * Links
- */
-a {
-    color: $brand-color;
-    text-decoration: none;
-
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
-
-    &:hover {
-        color: $text-color;
-        text-decoration: underline;
-    }
+img{
+	max-width: 100%;
 }
 
-
-
-/**
- * Blockquotes
- */
-blockquote {
-    color: $grey-color;
-    border-left: 4px solid $grey-color-light;
-    padding-left: $spacing-unit / 2;
-    font-size: 18px;
-    letter-spacing: -1px;
-    font-style: italic;
-
-    > :last-child {
-        margin-bottom: 0;
-    }
+input,
+textarea,
+select,
+option,
+button,
+input[type="submit"]{
+	transition: .3s ease;
+	transition-property: background color opacity;
+	border-radius: $border-radius;
+	border: none;
 }
 
-
-
-/**
- * Code formatting
- */
-pre,
-code {
-    font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+legend{
+	text-align: center;
+	background: $light-gray;
+	padding: .5em;
+	border-radius: $border-radius;
 }
 
-code {
-    padding: 1px 5px;
+fieldset{
+	background: transparentize($light-gray, .9);
+	padding: 1em;
+	border: none;
+	border-radius: $border-radius;
 }
 
-pre {
-    padding: 8px 12px;
-    overflow-x: scroll;
+input,
+textarea{
+	width: 100%;
+	max-width: 100%;
+	padding: .5em 1em;
+	opacity: .75;
+	outline: none;
+	border: 2px solid white;
 
-    > code {
-        border: 0;
-        padding-right: 0;
-        padding-left: 0;
-    }
+		&:focus,
+		&:active,
+		&:hover{
+			opacity: 1;
+		}
+
+		&:active,
+		&:focus{
+			border-color: $blue;
+		}
 }
 
-
-
-/**
- * Wrapper
- */
-.wrapper {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
-    @extend %clearfix;
-
-    @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
-    }
+input[type="radio"],
+input[type="checkbox"]{
+	width: auto;
 }
 
+button,
+input[type="submit"]{
+	font-family: $font-alt;
+	font-style: italic;
+	background: transparentize($dark-gray, .5);
+	color: inherit;
+	padding: .5em 1em;
 
+	&:hover{
+		background: transparentize($dark-gray, .75);
+	}
 
-/**
- * Clearfix
- */
-%clearfix {
+	&:disabled{
+		opacity: .5;
+		cursor: default;
+	}
 
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+	&.-dark{
+		background: transparentize($text-color, .85);
+		color: $text-color;
+		&:hover{
+			background: transparentize($text-color, .70);
+		}
+	}
+
+	&.-light{
+		background: transparentize($bg-color, .85);
+		color: $bg-color;
+		&:hover{
+			background: transparentize($bg-color, .70);
+		}
+	}
+
+	&.-outline{
+		background: transparent;
+		color: inherit;
+		border: 2px solid;
+	}
 }
 
+.logo{
+	max-width: 12.5em;
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+}
 
+.title{
+	font-family: $font-alt;
+	font-style: italic;
+	font-weight: normal;
+	text-align: center;
+	color: $blue;
+}
 
-/**
- * Icons
- */
-.icon {
+.subtitle{
+	text-align: center;
+	margin-top: $spacing-unit/2;
+	color: $dark-gray;
+}
 
-    > svg {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        vertical-align: middle;
+.subheading{
+	font-family: $font-alt;
+	font-style: italic;
+	font-weight: normal;
+	color: $light-gray;
+	margin-top: $spacing-unit/4;
+}
 
-        path {
-            fill: $grey-color;
-        }
-    }
+.muted{
+	opacity: .5;
+}
+
+.blue-bg{
+	background-color: $blue;
+	color: $white;
+}
+
+.light-green-bg{
+	background-color: $light-green;
+}
+
+.dark-green-bg{
+	background-color: $dark-green;
+	color: $white;
 }
