--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -2,8 +2,52 @@
 Components
 */
 
+.header{
+	background-size: 0;
+	@include media-query($laptop){
+		background-size: cover;
+		background-repeat: none;
+		background-position: center right;
+	}
+}
 
+.header__content{
+	padding: 1.5em 0;
+	background: linear-gradient(90deg, $bg-color 50%, transparentize($bg-color,1));
 
+	@include media-query($laptop){
+		>.container{
+			width: 100%;
+			max-width: 15em;
+		}
+	}
+}
 
+.banner{
+	position: relative;
+	&:after,
+	&:before{
+		display: block;
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 30%;
+	}
+	&:after{
+		top:0;
+		background: linear-gradient($white, transparentize($white,1));
+	}
+	&:before{
+		bottom:0;
+		background: linear-gradient(bottom,$white, transparentize($white,1));
+	}
 
+	@include media-query($laptop){
+		display: none;
+	}
+}
+
+.banner__img{
+	display: block;
+}
 
