--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -20,14 +20,16 @@ button{
 	font-size: $font-size;
 	font-weight: lighter;
 	line-height:  $line-height;
-
+	/*
 	@include media-query($tablet) {
     	font-size: $font-size * 1.25;
 	}
+	*/
 
-	@include media-query($desktop) {
+	@include media-query($big-desktop) {
     	font-size: $font-size * 1.5;
 	}
+
 }
 
 button,
