--- a/css/main.css
+++ b/css/main.css
@@ -23,17 +23,13 @@ button {
   font-family: "adobe-garamond-pro", serif;
   font-size: 20px;
   font-weight: lighter;
-  line-height: 1.4em; }
-  @media screen and (min-width: 600px) {
-    html,
-    form,
-    input,
-    textarea,
-    select,
-    option,
-    button {
-      font-size: 25px; } }
-  @media screen and (min-width: 1200px) {
+  line-height: 1.4em;
+  /*
+	@include media-query($tablet) {
+    	font-size: $font-size * 1.25;
+	}
+	*/ }
+  @media screen and (min-width: 1500px) {
     html,
     form,
     input,
@@ -59,11 +55,13 @@ html {
   font-family: "adobe-garamond-pro", serif; }
 
 body {
+  margin-top: 0;
   background: #f2f1f0;
   color: #333333; }
 
 h1 {
-  font-size: 1.75em; }
+  font-size: 1.75em;
+  line-height: 1.25em; }
 
 h2 {
   font-size: 1.5em; }
@@ -171,7 +169,7 @@ input[type="submit"] {
     border: 2px solid; }
 
 .logo {
-  max-width: 12.5em;
+  max-width: 15em;
   display: block;
   margin: 0 auto;
   text-align: center; }
@@ -182,6 +180,9 @@ input[type="submit"] {
   font-weight: normal;
   text-align: center;
   color: #495f99; }
+  @media screen and (min-width: 900px) {
+    .title {
+      text-align: left; } }
 
 .subtitle {
   text-align: center;
@@ -215,7 +216,8 @@ Objects
 .container {
   width: 90%;
   max-width: 1000px;
-  margin: 0 auto; }
+  margin-left: auto;
+  margin-right: auto; }
   @media screen and (min-width: 600px) {
     .container {
       width: 80%; } }
@@ -233,7 +235,7 @@ Objects
 .row:after {
   clear: both; }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 900px) {
   .row > .column {
     float: left; }
     .row > .column.full {
@@ -252,6 +254,46 @@ Objects
 /* 
 Components
 */
+.header {
+  background-size: 0; }
+  @media screen and (min-width: 900px) {
+    .header {
+      background-size: cover;
+      background-repeat: none;
+      background-position: center right; } }
+
+.header__content {
+  padding: 1.5em 0;
+  background: -webkit-linear-gradient(0deg, #f2f1f0 50%, rgba(242, 241, 240, 0));
+  background: linear-gradient(90deg, #f2f1f0 50%, rgba(242, 241, 240, 0)); }
+  @media screen and (min-width: 900px) {
+    .header__content > .container {
+      width: 100%;
+      max-width: 15em; } }
+
+.banner {
+  position: relative; }
+  .banner:after, .banner:before {
+    display: block;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 30%; }
+  .banner:after {
+    top: 0;
+    background: -webkit-linear-gradient(#f2f1f0, rgba(242, 241, 240, 0));
+    background: linear-gradient(#f2f1f0, rgba(242, 241, 240, 0)); }
+  .banner:before {
+    bottom: 0;
+    background: -webkit-linear-gradient(bottom, #f2f1f0, rgba(242, 241, 240, 0));
+    background: linear-gradient(bottom, #f2f1f0, rgba(242, 241, 240, 0)); }
+  @media screen and (min-width: 900px) {
+    .banner {
+      display: none; } }
+
+.banner__img {
+  display: block; }
+
 /* 
 Trumps & Hacks 
 */
