--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -149,6 +149,11 @@ input[type="submit"]{
 	display: block;
 	margin: 0 auto;
 	text-align: center;
+
+	&.-gray{
+		opacity: .25;
+		max-width: 7.5em;
+	}
 }
 
 .title{
@@ -160,6 +165,10 @@ input[type="submit"]{
 	@include media-query($laptop){
 		text-align: left;
 	}
+}
+
+.heading{
+	color: $blue;
 }
 
 .subtitle{
@@ -178,6 +187,13 @@ input[type="submit"]{
 
 .muted{
 	opacity: .5;
+}
+
+.copyright{
+	@extend .muted;
+	font-size: .75em;
+	text-align: center;
+	margin-bottom: 1rem;
 }
 
 .blue-bg{
