--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -19,7 +19,7 @@ $dark-gray: #808080;
 // size //
 $font-size: 20px;
 $line-height: 1.4em;
-$spacing-unit: 1rem;
+$spacing-unit: 1em;
 $border-radius: .5em;
 
 // fonts //
