--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,6 @@ option,
 button {
   font-family: "adobe-garamond-pro", serif;
   font-size: 20px;
-  font-weight: lighter;
   line-height: 1.4em;
   /*
 	@include media-query($tablet) {
@@ -92,7 +91,8 @@ textarea,
 select,
 option,
 button,
-input[type="submit"] {
+input[type="submit"],
+.button {
   -webkit-transition: .3s ease;
           transition: .3s ease;
   -webkit-transition-property: background color opacity;
@@ -135,41 +135,50 @@ input[type="checkbox"] {
   width: auto; }
 
 button,
-input[type="submit"] {
+input[type="submit"],
+.button {
   font-family: "Avenir", sans-serif;
   font-style: italic;
+  font-weight: 500;
   background: rgba(128, 128, 128, 0.5);
   color: inherit;
   padding: .5em 1em; }
   button:hover,
-  input[type="submit"]:hover {
+  input[type="submit"]:hover,
+  .button:hover {
     background: rgba(128, 128, 128, 0.25); }
   button:disabled,
-  input[type="submit"]:disabled {
+  input[type="submit"]:disabled,
+  .button:disabled {
     opacity: .5;
     cursor: default; }
   button.-dark,
-  input[type="submit"].-dark {
+  input[type="submit"].-dark,
+  .button.-dark {
     background: rgba(51, 51, 51, 0.15);
     color: #333333; }
     button.-dark:hover,
-    input[type="submit"].-dark:hover {
+    input[type="submit"].-dark:hover,
+    .button.-dark:hover {
       background: rgba(51, 51, 51, 0.3); }
   button.-light,
-  input[type="submit"].-light {
+  input[type="submit"].-light,
+  .button.-light {
     background: rgba(242, 241, 240, 0.15);
     color: #f2f1f0; }
     button.-light:hover,
-    input[type="submit"].-light:hover {
+    input[type="submit"].-light:hover,
+    .button.-light:hover {
       background: rgba(242, 241, 240, 0.3); }
   button.-outline,
-  input[type="submit"].-outline {
+  input[type="submit"].-outline,
+  .button.-outline {
     background: transparent;
     color: inherit;
     border: 2px solid; }
 
 .logo {
-  max-width: 15em;
+  max-width: 12.5em;
   display: block;
   margin: 0 auto;
   text-align: center; }
@@ -209,17 +218,6 @@ input[type="submit"] {
   font-size: .75em;
   text-align: center;
   margin-bottom: 1rem; }
-
-.blue-bg {
-  background-color: #495f99;
-  color: #f2f1f0; }
-
-.light-green-bg {
-  background-color: #b5d96d; }
-
-.dark-green-bg {
-  background-color: #33662e;
-  color: #f2f1f0; }
 
 /* 
 Objects
@@ -315,9 +313,16 @@ Components
   margin-top: .5em; }
   .link-list__item > a:hover {
     opacity: .5; }
+  @media screen and (min-width: 900px) {
+    .link-list__item {
+      display: inline-block;
+      margin-right: 2em; }
+      .link-list__item:last-child {
+        margin-right: 0; } }
 
 .sponsors > h2 {
-  text-align: center; }
+  text-align: center;
+  margin-top: 1em; }
 
 .image-list {
   display: -webkit-box;
@@ -341,9 +346,77 @@ Components
   display: inline-block;
   max-width: 5rem;
   max-height: 5rem;
-  margin: .5em;
+  margin: 1em;
   border-radius: 100%;
   overflow: hidden; }
+
+.blue-bg {
+  background-color: #495f99;
+  color: #f2f1f0; }
+  .blue-bg > button, .blue-bg input[type="submit"], .blue-bg .button {
+    background: rgba(242, 241, 240, 0.15);
+    color: #f2f1f0; }
+    .blue-bg > button:hover, .blue-bg input[type="submit"]:hover, .blue-bg .button:hover {
+      background: rgba(242, 241, 240, 0.3); }
+
+.light-green-bg {
+  background-color: #b5d96d; }
+  .light-green-bg > button, .light-green-bg input[type="submit"], .light-green-bg .button {
+    background: rgba(51, 51, 51, 0.15);
+    color: #333333; }
+    .light-green-bg > button:hover, .light-green-bg input[type="submit"]:hover, .light-green-bg .button:hover {
+      background: rgba(51, 51, 51, 0.3); }
+
+.dark-green-bg {
+  background-color: #33662e;
+  color: #f2f1f0; }
+  .dark-green-bg > button, .dark-green-bg input[type="submit"], .dark-green-bg .button {
+    background: rgba(242, 241, 240, 0.15);
+    color: #f2f1f0; }
+    .dark-green-bg > button:hover, .dark-green-bg input[type="submit"]:hover, .dark-green-bg .button:hover {
+      background: rgba(242, 241, 240, 0.3); }
+
+.cta-list {
+  text-align: center;
+  margin: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
+
+.cta-list__item {
+  -webkit-flex-basis: 20em;
+      -ms-flex-preferred-size: 20em;
+          flex-basis: 20em;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  font-size: .9em;
+  line-height: 1.4em;
+  padding: 3em 2em;
+  margin: 0;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
 
 /* 
 Trumps & Hacks 
