--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -48,6 +48,31 @@ a{
 	}
 }
 
+blockquote{
+	width: 50%;
+	min-width: 15em;
+	margin: 1.5em auto;
+	text-align: center;
+	font-style: italic;
+	color: $dark-gray;
+	position: relative;
+	background: url("../assets/img/quote-left.png") top left no-repeat,
+	            url("../assets/img/quote-right.png") bottom right no-repeat;
+	background-size: 3em;
+
+	& cite{
+		display: block;
+		font-family: $font-alt;
+		font-size: .75em;
+		color: $text-color;
+		&:before{
+			content: '—';
+			display: inline-block;
+			padding-right: .5em;
+		}
+	}
+}
+
 img{
 	max-width: 100%;
 }
