--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* 
 Settings 
 */
@@ -82,6 +83,26 @@ a {
   display: inline-block; }
   a:hover, a:focus {
     color: #0d0d0d; }
+
+blockquote {
+  width: 50%;
+  min-width: 15em;
+  margin: 1.5em auto;
+  text-align: center;
+  font-style: italic;
+  color: #808080;
+  position: relative;
+  background: url("../assets/img/quote-left.png") top left no-repeat, url("../assets/img/quote-right.png") bottom right no-repeat;
+  background-size: 3em; }
+  blockquote cite {
+    display: block;
+    font-family: "Avenir", sans-serif;
+    font-size: .75em;
+    color: #333333; }
+    blockquote cite:before {
+      content: '—';
+      display: inline-block;
+      padding-right: .5em; }
 
 img {
   max-width: 100%; }
