--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -50,15 +50,18 @@ a{
 
 blockquote{
 	width: 50%;
-	min-width: 15em;
+	min-width: 12.5em;
 	margin: 1.5em auto;
 	text-align: center;
 	font-style: italic;
 	color: $dark-gray;
 	position: relative;
-	background: url("../assets/img/quote-left.png") top left no-repeat,
-	            url("../assets/img/quote-right.png") bottom right no-repeat;
-	background-size: 3em;
+
+	& p{
+		background: url("../assets/img/quote-left.svg") top left no-repeat,
+		            url("../assets/img/quote-right.svg") bottom right no-repeat;
+		background-size: 3em;
+	}
 
 	& cite{
 		display: block;
