Start to create and style Graph List component

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header class="header" style="background-image: url('../{{page.banner}}');">
   <div class="row">
     <div class="header__content half column">
-      <img class="logo" src="assets/img/HOPE_logo.svg" alt="HOPE Leadership Academy Logo">
+      <a class="logo" href="/">
+        <img src="/assets/img/HOPE_logo.svg" alt="HOPE Leadership Academy Logo">
+      </a>
       <div class="banner">
         <img class="banner__img" src="{{ page.banner }}" alt="Page Banner">
       </div>
