--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -58,6 +58,22 @@ Components
 	margin-bottom: 1em;
 }
 
+.link-list--interactive{
+	@extend .link-list;
+	text-align: left;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	white-space: nowrap;
+	font-size: .75em;
+
+	> .link-list__item{
+		display: inline-block;
+		margin-right: 1em;
+		color: $light-gray;
+		cursor: pointer;
+	}
+}
+
 .link-list__item{
 	margin-top: .5em;
 
@@ -89,12 +105,29 @@ Components
 }
 
 .image-list__item{
-	display: inline-block;
-	max-width: 5rem;
-	max-height: 5rem;
 	margin: 1em;
-	border-radius: 100%;
 	overflow: hidden;
+	text-align: center;
+	max-width: 5em;
+
+	> img{
+		border-radius: 100%;
+	}
+
+	> h2{
+		font-size: 1em;
+		margin-top: 0;
+	}
+}
+
+.graph-list__item{
+	& figcaption{
+		font-family: "Avenir";
+		font-size: .75em;
+		font-style: italic;
+		line-height: 1.4em;
+		color: $light-gray;
+	}
 }
 
 .blue-bg{
