--- a/css/main.css
+++ b/css/main.css
@@ -220,6 +220,9 @@ input[type="submit"],
 
 .heading {
   color: #495f99; }
+  @media screen and (min-width: 900px) {
+    .heading {
+      margin-top: 1.5em; } }
 
 .subtitle {
   text-align: center;
@@ -325,11 +328,23 @@ Components
 .banner__img {
   display: block; }
 
-.link-list {
+.link-list, .link-list--interactive {
   margin: 0 auto;
   text-align: center;
   font-family: "Avenir", sans-serif;
   margin-bottom: 1em; }
+
+.link-list--interactive {
+  text-align: left;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  font-size: .75em; }
+  .link-list--interactive > .link-list__item {
+    display: inline-block;
+    margin-right: 1em;
+    color: #a9a8a8;
+    cursor: pointer; }
 
 .link-list__item {
   margin-top: .5em; }
@@ -365,12 +380,22 @@ Components
           justify-content: center; }
 
 .image-list__item {
-  display: inline-block;
-  max-width: 5rem;
-  max-height: 5rem;
   margin: 1em;
-  border-radius: 100%;
-  overflow: hidden; }
+  overflow: hidden;
+  text-align: center;
+  max-width: 5em; }
+  .image-list__item > img {
+    border-radius: 100%; }
+  .image-list__item > h2 {
+    font-size: 1em;
+    margin-top: 0; }
+
+.graph-list__item figcaption {
+  font-family: "Avenir";
+  font-size: .75em;
+  font-style: italic;
+  line-height: 1.4em;
+  color: #a9a8a8; }
 
 .blue-bg {
   background-color: #495f99;
@@ -446,3 +471,6 @@ Trumps & Hacks
 @media screen and (min-width: 900px) {
   .u-nowrap {
     white-space: nowrap; } }
+
+.u-hidden {
+  display: none; }
