--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,8 +18,8 @@
   </div>
   <nav>
     <ul class="link-list">
-      <li class="link-list__item"><a href="#">Home</a></li>
-      <li class="link-list__item"><a href="#">About</a></li>
+      <li class="link-list__item"><a href="/">Home</a></li>
+      <li class="link-list__item"><a href="/about">About</a></li>
       <li class="link-list__item"><a href="#">Program Overview</a></li>
       <li class="link-list__item"><a href="#">Get Involved</a></li>
     </ul>
