--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -216,16 +216,17 @@ Components
 
 	> .info{
 		flex: 1 0 70%;
+		margin-right: 5%;
 	}
 
 	> .price{
 		margin: auto 0;
+		width: 6rem;
 		font-family: $font-alt;
 		font-style: italic;
 		color: $dark-green;
 		font-size: 2.5em;
 		line-height: 2em;
-		flex: 0 0 auto;
 	}
 }
 
