--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,8 @@ Components
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
-  font-size: .75em; }
+  font-size: .75em;
+  -webkit-overflow-scrolling: touch; }
   .link-list--interactive > .link-list__item, .link-list--interactive > .link-list__item--active {
     display: inline-block;
     margin-right: 1em;
@@ -397,6 +398,13 @@ Components
     font-size: 1em;
     margin-top: 0; }
 
+.graph-list {
+  margin-bottom: 1em;
+  padding-bottom: 1em; }
+
+.graph-list__item:last-child {
+  margin-bottom: 1em; }
+
 .graph-list__item figcaption {
   font-family: "Avenir";
   font-size: .75em;
@@ -433,7 +441,6 @@ Components
 
 .cta-list {
   text-align: center;
-  margin: 0;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -441,6 +448,9 @@ Components
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; }
+
+header + .cta-list {
+  margin-top: 0; }
 
 .cta-list__item {
   -webkit-flex-basis: 20em;
@@ -506,7 +516,9 @@ Components
     line-height: 2em; }
 
 .timeline {
-  position: relative; }
+  position: relative;
+  margin-bottom: 1em;
+  padding-bottom: 1em; }
   .timeline:after {
     position: absolute;
     top: 0;
@@ -537,13 +549,15 @@ Components
   position: absolute;
   bottom: -webkit-calc(1.5em - 2px);
   bottom: calc(1.5em - 2px);
-  z-index: -1; }
+  z-index: -1;
+  margin-bottom: 1em; }
 
 .timeline-list {
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
-  z-index: 0; }
+  z-index: 0;
+  -webkit-overflow-scrolling: touch; }
 
 .timeline-list__item, .timeline-list__item--year {
   display: inline-block;
