--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,9 +19,9 @@
   <nav>
     <ul class="link-list">
       <li class="link-list__item"><a href="/">Home</a></li>
-      <li class="link-list__item"><a href="/about">About</a></li>
-      <li class="link-list__item"><a href="#">Program Overview</a></li>
-      <li class="link-list__item"><a href="#">Get Involved</a></li>
+      <li class="link-list__item"><a href="/about">Our Mission</a></li>
+      <li class="link-list__item"><a href="/program">Program Overview</a></li>
+      <li class="link-list__item"><a href="/donate">Get Involved</a></li>
     </ul>
   </nav>
   <img class="logo -gray" src="/assets/img/HOPE_logo-black.svg" alt="HOPE Leadership Academy Logo">
