--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -186,6 +186,7 @@ Components
 }
 
 .cta-list{
+	margin-top: $spacing-unit*2;
 	text-align: center;
 	display: flex;
 	flex-wrap: wrap;
@@ -229,6 +230,13 @@ Components
 	> .info{
 		flex: 1 0 70%;
 		margin-right: 5%;
+		> ul{
+			list-style-type: circle;
+			margin-left: 1em;
+		}
+		& li{
+			margin-top: .25em;
+		}
 	}
 
 	> .price{
