Updates to links to account for baseurl

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,12 +18,12 @@
   </div>
   <nav>
     <ul class="link-list">
-      <li class="link-list__item"><a href="/">Home</a></li>
-      <li class="link-list__item"><a href="/about">Our Mission</a></li>
-      <li class="link-list__item"><a href="/program">Program Overview</a></li>
-      <li class="link-list__item"><a href="/donate">Get Involved</a></li>
+      <li class="link-list__item"><a href="{{page.baseurl}}/">Home</a></li>
+      <li class="link-list__item"><a href="{{page.baseurl}}/about">Our Mission</a></li>
+      <li class="link-list__item"><a href="{{page.baseurl}}/program">Program Overview</a></li>
+      <li class="link-list__item"><a href="{{page.baseurl}}/donate">Get Involved</a></li>
     </ul>
   </nav>
-  <img class="logo -gray" src="/assets/img/HOPE_logo-black.svg" alt="HOPE Leadership Academy Logo">
+  <img class="logo -gray" src="{{page.baseurl}}/assets/img/HOPE_logo-black.svg" alt="HOPE Leadership Academy Logo">
   <p class="copyright">Copyright H.O.P.E. Leadership Academy 2015</p>
 </footer>
