--- a/css/main.css
+++ b/css/main.css
@@ -586,9 +586,13 @@ header + .cta-list {
     width: 8rem;
     border-radius: 100%;
     overflow: hidden;
-    margin: 1.5em auto; }
-    .quote__img > img {
+    margin: 1.5em auto;
+    -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%); }
+    .quote__img > img,
+    .quote__img > video {
       display: block; }
+    .quote__img > video {
+      max-width: 100%; }
 
 .timeline__line {
   width: 100%;
