--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -112,7 +112,7 @@ Components
 }
 
 .image-list__item{
-	margin: 1em;
+	margin: 1em 1em 0;
 	overflow: hidden;
 	text-align: center;
 	max-width: 5em;
@@ -121,8 +121,9 @@ Components
 		border-radius: 100%;
 	}
 
-	> h2{
-		font-size: 1em;
+	> p{
+		font-size: .9em;
+		line-height: 1.2em;
 		margin-top: 0;
 	}
 }
