Integrate youtube video playlist in program, add responsive styles to new ytv component

--- a/css/main.css
+++ b/css/main.css
@@ -644,6 +644,17 @@ header + .cta-list {
   width: 2em;
   display: block; }
 
+.ytv {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+  .ytv__wrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0; }
+
 /* 
 Trumps & Hacks 
 */
