--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -382,4 +382,18 @@ Components
 	display: block;
 }
 
+.ytv{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	&__wrapper{
+		position: relative;
+		padding-bottom: 56.25%;
+		height: 0;
+	}
+}
+
 
