--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,4 @@
 <footer class="footer container">
-  <div class="sponsors">
-    <h2 class="heading">Our Sponsors</h2>
-    <ul class="image-list">
-      <li class="image-list__item">
-        <img src="http://placehold.it/150x150">
-      </li>
-      <li class="image-list__item">
-        <img src="http://placehold.it/150x150">
-      </li>
-      <li class="image-list__item">
-        <img src="http://placehold.it/150x150">
-      </li>
-      <li class="image-list__item">
-        <img src="http://placehold.it/150x150">
-      </li>
-    </ul>
-  </div>
   <nav>
     <ul class="link-list">
       <li class="link-list__item"><a href="{{site.baseurl}}/">Home</a></li>
@@ -25,5 +8,8 @@
     </ul>
   </nav>
   <img class="logo -gray" src="{{site.baseurl}}/assets/img/HOPE_logo-black.svg" alt="HOPE Leadership Academy Logo">
+  <p class="sponsors">
+    H.O.P.E. Leadership Academy is a proud partner of Connect, a Leadership Huntsville/Madison County Program. Major sponsors of H.O.P.E. include Dr. Libby & Steve Parker.
+  </p>
   <p class="copyright">Copyright H.O.P.E. Leadership Academy 2015</p>
 </footer>
