--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -98,10 +98,8 @@ Components
 }
 
 .sponsors{
-	> h2{
-		text-align: center;
-		margin-top: 1.5em;
-	}
+	color: $dark-gray;
+	text-align: center;
 }
 
 .image-list{
